--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mattia Borsoi | Cyber Security &amp; Compliance</title>
+    
+    <!-- SEO Meta Description -->
+    <meta name="description" content="Expert consultancy for global cybersecurity programmes and compliance. I help leadership teams build, audit, and manage robust, world-class cybersecurity programmes.">
+    
+    <!-- Simple Text-Based Favicon (MB) -->
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22 fill=%22%23F59E0B%22>MB</text></svg>">
+
     <!-- Load Tailwind CSS from CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- Load Cloudflare Turnstile (CAPTCHA) -->
