--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
             <!-- Left Side: Info -->
             <div class="p-8 md:p-12">
                 <h1 class="text-3xl md:text-4xl font-bold text-white mb-2">Mattia Borsoi</h1>
-                <h2 class="text-xl md:text-2xl font-medium text-amber-500 mb-6">Global Cybersecurity Programme &amp; Compliance</h2>
+                <h2 class="text-xl md:text-2xl font-medium text-amber-500 mb-6">Global Cybersecurity Programme &amp; Compliance Manager</h2>
 
                 <p class="text-gray-300 mb-8 leading-relaxed">
-                    I leverage experience managing cybersecurity compliance for a global network of 150+ firms to offer expert consultancy for your business.
+                    I leverage experience managing cybersecurity compliance for a global network of 76,000 employees across 150+ territories in to offer expert consultancy for your business.
                 </p>
                 <p class="text-gray-300 mb-8 leading-relaxed">
                     I help leadership teams build, audit, and manage robust, world-class cybersecurity programmes.
