--- a/index.html
+++ b/index.html
@@ -106,6 +106,16 @@
                         </button>
                     </div>
                 </form>
+
+                <!-- New section for direct email -->
+                <p class="text-center text-gray-400 text-sm mt-6">
+                    Or email me directly at:
+                    <a href="mailto:mattia@borsoi.co.uk" class="text-amber-500 hover:text-amber-400 underline">
+                        mattia@borsoi.co.uk
+                    </a>
+                </p>
+                <!-- End of new section -->
+
             </div>
         </div>
 
