--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mattia Borsoi | Cyber Security &amp; Compliance</title>
+    <title>Mattia Borsoi | Cybersecurity Consultant | Compliance Expert</title>
     
     <!-- SEO Meta Description -->
-    <meta name="description" content="Expert consultancy for global cybersecurity programmes and compliance. I help leadership teams build, audit, and manage robust, world-class cybersecurity programmes.">
+    <meta name="description" content="Seeking a UK-based cybersecurity consultant or contractor? I'm Mattia Borsoi, a specialist in global cybersecurity programmes and compliance, leveraging my experience as Global Cybersecurity Compliance Manager at Grant Thornton International to offer expert, independent consultancy.">
     
     <!-- Simple Text-Based Favicon (MB) -->
     <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22 fill=%22%23F59E0B%22>MB</text></svg>">
@@ -41,13 +41,13 @@
             <!-- Left Side: Info -->
             <div class="p-8 md:p-12">
                 <h1 class="text-3xl md:text-4xl font-bold text-white mb-2">Mattia Borsoi</h1>
-                <h2 class="text-xl md:text-2xl font-medium text-amber-500 mb-6">Global Cybersecurity Programme &amp; Compliance Manager</h2>
+                <h2 class="text-xl md:text-2xl font-medium text-amber-500 mb-6">Global Cybersecurity &amp; Compliance Consultant</h2>
 
                 <p class="text-gray-300 mb-8 leading-relaxed">
-                    I leverage experience managing cybersecurity compliance for a global network of 76,000 employees across 150+ territories in to offer expert consultancy for your business.
+                    As the Global Cybersecurity Compliance Manager at Grant Thornton International, I manage compliance for a network of 76,000+ people across 150+ territories. I leverage this unique global experience to offer expert, independent consultancy for your business.
                 </p>
                 <p class="text-gray-300 mb-8 leading-relaxed">
-                    I help leadership teams build, audit, and manage robust, world-class cybersecurity programmes.
+                    Based in the UK, I help leadership teams build, audit, and manage robust, world-class cybersecurity programmes.
                 </p>
 
                 <div class="mb-8">
